--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ng": "ng",
     "clean": "del dist",
     "start": "npm run angular:dev:start",
-    "build": "npm-run-all build:ci website:build build:clean",
-    "build:ci": "npm-run-all clean -p format lint -s build:libs build:apps test build:clean",
+    "build": "npm-run-all rebuild:node-sass build:ci build:components-doc website:build build:clean",
+    "rebuild:node-sass": "npm rebuild node-sass",
+    "build:ci": "npm-run-all clean -p lint -s build:libs build:apps build:clean",
     "build:libs": "npm-run-all -p ui:build icons:build schematics:build core:build -s angular:build",
     "build:clean": "npm-run-all core:build:clean",
     "build:apps": "npm-run-all -p angular:dev:build core:dev:build",
@@ -57,8 +58,8 @@
     "schematics:build:ts": "tsc -p ./src/schematics/tsconfig.json",
     "schematics:build:collection": "cpy --parents --cwd='src/schematics/src/' '**/*.json' ../../../dist/clr-angular/schematics",
     "schematics:build": "npm-run-all schematics:build:ts schematics:build:collection",
-    "website:start": "npm run core:build:src && npm run website:news && ng serve website",
-    "website:build": "npm run website:news && ng build website --prod --progress=false",
+    "website:start": "ng serve website",
+    "website:build": "npm run build:demos-doc && ng build website",
     "website:deploy": "./scripts/website.sh",
     "website:404": "cpy --rename 404.html dist/website/index.html dist/website",
     "website:functions": "netlify-lambda build scripts/netlify",
@@ -103,7 +104,9 @@
     "core:build:api": "npm-run-all -p core:build:api:md core:build:api:editor --",
     "core:build:api:md": "wca analyze 'src/clr-core/**/*.ts' --format=md --outDir=docs/core",
     "core:build:api:json": "wca analyze 'src/clr-core/**/*ts' --format=json --outDir=src/dev-core/api",
-    "core:build:api:editor": "wca analyze 'src/clr-core/**/*.ts' --format=json --outFile dist/clr-core/custom-elements.json"
+    "core:build:api:editor": "wca analyze 'src/clr-core/**/*.ts' --format=json --outFile dist/clr-core/custom-elements.json",
+    "build:components-doc": "compodoc -p ./src/clr-angular/tsconfig.lib.json -e json -d ./src/website/gen/components-compodoc-documentation",
+    "build:demos-doc": "compodoc -p ./src/website/tsconfig.app.json -e json -d ./src/website/gen/examples-compodoc-documentation"
   },
   "dependencies": {
     "@angular/animations": "8.0.0",
@@ -129,7 +132,8 @@
     "ramda": "0.26.1",
     "rxjs": "6.5.2",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@vcd/ui-doc-lib": "./doc-lib"
   },
   "optionalDependencies": {
     "cypress": "3.4.1"
