Provide generated compodoc jsons of components & examples to the website app
**What was the change?**
Config files modified:
clr-angular/tsconfig.lib.json - This is added for providing 'clr-angular' package as input to the compodoc command
website/tsconfig.app.json - The option 'esModuleInterop": true' is added to overcome import errors such as "import from 'raw-loader!./ui/full.html'"
website/tslint.json - The option 'no-barrel-imports' is set to false to overcome the import errors of .json files

**Why was this change made?**
To leverage doc-lib library to generate documentation website for Clarity

--- a/src/website/tsconfig.app.json
+++ b/src/website/tsconfig.app.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "module": "esnext",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "paths": {
       "@clr/angular": ["../clr-angular"],
       "@clr/icons": ["../clr-icons"],
