--- a/doc-lib/package.json
+++ b/doc-lib/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
+    "@angular/core": "^8.2.14",
+    "prismjs": "1.14.0"
   },
   "dependencies": {
     "@compodoc/compodoc": "1.1.11",
-    "prismjs": "1.17.1",
     "tslib": "^1.9.0"
   },
   "main": "bundles/vcd-ui-doc-lib.umd.js",
