--- a/package.json
+++ b/package.json
@@ -133,7 +133,8 @@
     "rxjs": "6.5.2",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
     "zone.js": "~0.9.1",
-    "@vcd/ui-doc-lib": "./doc-lib"
+    "@vcd/ui-doc-lib": "./doc-lib",
+    "firebase": ">= 5.5.7 <8"
   },
   "optionalDependencies": {
     "cypress": "3.4.1"
@@ -231,7 +232,12 @@
     "wc-sass-render": "1.2.1",
     "web-component-analyzer": "0.1.20",
     "webpack-cli": "3.3.1",
-    "xml-js": "1.6.11"
+    "xml-js": "1.6.11",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "firebase-tools": "^6.10.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   },
   "engines": {
     "node": ">=10.9.0 <11.0.0",
